change in divide cards